<resources>
    <string name="app_name">Weibo</string>
    <string name="login">授权并登录</string>
    <string name="home_page">首页</string>
    <string name="relate_to_me">\@我的</string>
    <string name="message">私信</string>
    <string name="thumb_for_me">收到的赞</string>
    <string name="comment">评论</string>
    <string name="collections">我的收藏</string>
    <string name="account_manage">账号管理</string>
    <string name="quit_present_account">退出登录</string>
    <string name="mine">我的</string>

    <string name="content">从中土神洲而来的这拨外乡剑修，总计五人。

        除了拎酒少年，还很镇定自若，其余三人都稍稍后退，随时准备祭出飞剑，其中一人，二十岁出头，神sè木讷，无论是退避，还是牵引灵气准备出剑，都比同伴慢了半步。还有一位少女，亭亭玉立，对襟彩领，外罩纱裙，点缀百花，是中土神洲女子修士颇为喜好的玉逍遥样式。她最早伸手按住腰间长剑。

        至于最后一人，当然就是被陈平安悬空提起的那个背剑少年，被陈平安禁锢住后，拳意罡气压制，后者几处关键窍穴的灵气不得出，试图冲关，破门而去，却一次次被击退，竟是无法动弹，一来二去，脸sè涨红，转为青紫sè，就像一条挂在墙上晒着的死鱼，估计此刻心中的羞愧，半点不比杀意少。

        陈平安问道：“他不愿意说，你替他说？”

        拎酒少年笑容灿烂，“他方才说了什么，我没听清啊。”

        陈平安笑问道：“亚圣一脉，耳朵都这么不灵光吗？”

        那名少女怒道：“陈平安，你给我放开蒋观澄！别以为在剑气长城这边小有名气，就可以肆意妄为！一言不合，你就要杀人吗？！文圣一脉的弟子，真是一个比一个好脾气！先有崔瀺欺师灭祖，后有左右，毁了多少中土神洲的先天剑胚！我那师伯……还有你，陈平安！身为儒家门生，文圣高徒，竟然在这里操持贱业，亲自卖酒！斯文扫地！”

        说到师伯处，少女咬牙切齿，眼眶当中竟是莹莹泪光，等到重新提及陈平安，立即就恢复正常，尤其愤懑恼火。

        陈平安置若罔闻。

        这种当面指摘，指着鼻子骂人的，他反而还真不太在意。再说了又不是骂先生，骂先生的师弟、自己的师兄们而已，他是先生一脉的老幺，还需要他这小师弟去为师兄们仗义执言？

        为国师崔瀺说几句公道话？还是为师兄左右打抱不平？需要吗？陈平安觉得不需要，一个要一洲即一国，阻滞妖族北上，阻止妖族一鼓作气吞并桐叶、宝瓶和北俱芦洲三洲版图。一个要成为浩然天下之外的所有天下，剑术最高，其实都很忙。至于他陈平安，也忙。

        习武练剑炼气读书，即将炼化第四件本命物，外加挣钱坐庄刻印章，能不忙吗？

        不过最重要的，还是这个小姑娘的言语，无论有理无理，道理够不够大，终究没有什么用心险恶的那种坏心。

        那么陈平安就可以理解，并且接受。

        “朱枚，怎么跟陈先生说话的。”

        少年教训了一句少女，然后继续笑眯眯与陈平安言语，“陈先生辈分高，晚辈聆听教诲，陈先生无论说什么，晚辈有则改之无则加勉。还有啊，陈先生手中这位蒋观澄，是我们苦夏剑仙的嫡传弟子，苦夏剑仙又是我们家乡那边，某位十人之一的师侄，很麻烦的。当然了，陈先生的师兄，左大剑仙，晚辈仰慕已久，如今左大剑仙就在剑气长城练剑，想来不用太过担心。不过天下剑仙是一家，伤了和气，终究不美。”

        陈平安问道：“你是观海境剑修？第一战人选？”

        少年没有回答这个问题，微笑着反问道：“陈先生是宝瓶洲人氏，该不会帮着剑气长城剑修守关吧？”

        少年剑修与陈平安，一个用浩然天下大雅言，一个用剑气长城这边的方言。

        少年低头看了一眼。

        陈平安轻轻一推，将那高大少年摔出去十数丈，抱怨道：“长这么高个儿，害我垫脚半天。”

        然后陈平安看着这个拎酒的有趣少年，“年纪轻轻，就有这么高的境界，在咱们这儿逛荡，再说些有的没的，真不怕吓死我们这些胆小的，境界低的？”

        陈三秋用家乡方言，与四周酒客们解释两人的对话内容。

        酒铺那边口哨声四起，尤其是蹲着喝酒的酒鬼与光棍们，很是配合二掌柜。他娘的以前只觉得二掌柜抠搜鸡贼，没想到跟这帮中土神洲小崽子一对比，好一个玉树临风。以前真是冤枉了二掌柜，以后来此喝酒，是不是菜碟酱菜少拿些？何况靠吃酱菜从二掌柜身上，好不容易占点便宜，事后总觉得不太妥当，吃多了，容易多喝酒。

        陈平安转头望向铺子那边，笑问道：“不如我就以四境修士的身份，来守第一关？你们要是都押注我输，我就坐这个庄了。”

        酒客们人人竖起中指，笑骂不已，很不客气，还有人直接为那帮外乡剑修加油鼓劲，说这咱们这二掌柜除了卖酒写对联，其实屁本事没有，真要打起来，三两拳撂倒，怕什么，身为外乡中土剑修，就该拿出一点英雄气概来，那陈平安就是从宝瓶洲这种小地方来的，任毅溥瑜齐狩庞元济，这四个家伙，是合起伙来坐庄呢，故意输给陈平安这个王八蛋的，你们只要不是傻子，就千万别信啊。

        那个名叫朱枚的少女，冷笑道：“原来不光是卖酒的酒鬼，还是个赌棍，文圣老先生，真是瞎了眼，才找到你这么个关门弟子！”

        陈平安微笑道：“喝酒，赌钱，杀妖，确实不值一提，都是你们中土神洲修士眼中，很不入流的事情。”

        这句话一说出口，陈三秋那边一个个闹哄哄大声喝彩，拍桌子敲筷子。

        朱枚被噎的不行。

        而且内心深处还有些畏惧，就好像自己莫名其妙置身于一座陌生的小天地。

        因为陈平安虽然离着那些剑气长城的大小剑修有些远，但好像这个名不副实的文圣小弟子，与他身后那些剑修，遥遥呼应。

        陈平安笑道：“知道我这句话没道理在何处吗？就在于喝酒赌钱两事，在浩然天下，确实不该是读书人所为，就因为我故意扯上杀妖一事，你便无言以对了，因为你还是个有点良心的中土剑修，诚心觉得杀妖一事，是壮举。故而才会理亏心虚。其实不用，世间讲理，需有个先后，有一说一，大小对错，不可相互涵盖抵消，比如你若是先承认了杀妖一事，极对，对了万年，再来与我讲酒鬼赌棍的极其不对，你看我认不认？如何？我文圣一脉，是不是脾气当真不错，还愿意讲道理？”

        少女瞪大眼睛，脑子里一团浆糊，眼前这个青衫酒鬼，怎么说出来的混账话，好像还真有那么点道理？

        可她就是忍不住一阵火大啊。

        陈平安最后对那个再没了笑意的拎酒少年说道：“放心，我不会以四境练气士的身份，守这第一关。为什么？不是我不想教你做人，教你好好说话，而是我尊敬你们身为中土剑修，却愿意来剑气长城走上一遭，好歹愿意亲眼看一看那座蛮荒天下。外乡修士走三关，是公事。你我之间，是私人恩怨，以后再说。”

        陈平安走回酒铺那边。

        有个下筷如飞吃酱菜的汉子喊道：“二掌柜，威风大了，请客喝酒，庆贺庆贺？”

        陈平安笑呵呵道：“我拜托诸位剑仙要点脸啊，赶紧收一收你们的剑气。尤其是你，叶春震，每次喝一壶酒，就要吃我三碟酱菜，真当我不知道？老子忍你很久了。”

        那汉子双指捻起地上那只剩下半碟的酱菜，“还你？”

        陈平安哑口无声。

        那汉子洋洋自得，他娘的老子不要脸起来，自己都怕，还怕你二掌柜？再说了，还不是跟你二掌柜学的？

        陈平安咳嗽一声，没有落座，拍了拍手掌，大声道：“咱们铺子是小本买卖，本来打算近期除了酱菜之外，每买一壶酒，再白送一碗阳春面，这就是我打肿脸充胖子了，现在看来，还是算了，反正阳春面也不算什么美食，清汤寡淡的，也就是面条筋道些，葱花有那么几粒，再加那么一小碟酱菜倒入其中，筷子那么一搅拌，滋味其实也就凑合。”

        叶春震立即就算四周酒鬼眼神如飞剑。

        因为谁都知道与二掌柜讲理，讲不过的。

        叶春震一咬牙，“二掌柜，来一壶好酒，五颗雪花钱的！今儿不小心稍稍多吃了些酱菜，有点咸了，喝点好酒，压一压。”

        “好嘞，叶老哥等着。”

        那家伙屁颠屁颠去铺子拿好酒，不忘转头笑道：“过两天就有阳春面。”

        背剑少年蒋观澄已经被搀扶起身，以剑气震碎那些拳意罡气，脸sè好转许多。

        朱枚轻声问道：“严律，你没事吧？”

        名叫严律的拎酒少年，轻轻摇头，笑道：“我能有什么事。如果对方借机守关，我才会有事，会被君璧骂死的。”

        朱枚轻声埋怨道：“你也真是，由着蒋观澄来这边胡闹，君璧叮嘱过我们的，到了孙剑仙府邸后，不要轻易外出。”

        一身素雅长袍的少年转头望去一眼酒铺，很快收回视线。

        那种乱糟糟的氛围，他不喜欢，甚至是厌恶。

        修道之人，没有半点洁身自好，没有半分山上仙气。

        严律拎起手中的那壶青神山酒，笑道：“我这不是想要知道这仙家酒酿，到底与青神山有无渊源嘛。我家老祖，每次竹海洞天的青神宴，都会参加。”

        朱枚白眼道：“就你严律最喜欢翻家谱和老黄历，生怕别人不知道你家祖上有多阔。蒋观澄的家族与师门传承，又不比你差，你见他吹嘘过自己的师伯是谁吗？不过他就是脑子不好使，听风就是雨，做什么事情都不过脑子的，稍稍给人撺掇几句，就喜欢炸毛。真当这儿是咱们家乡中土神洲啊，此次赶来剑气长城，我家老祖叮嘱了我好些，不许我在这边摆架子，乖乖当个哑巴聋子就成，唉，算了，我也没资格说这些，方才我就没少说话。说好了，你不许去君璧那边有什么说什么，就说我从头到尾都没讲话。君璧唉，才观海境，可他生气的时候，多可怕，我还好，反正境界不高，瞧瞧你们，还不是一个个照样学我噤若寒蝉。”</string>
    <string name="avatar">用户头像</string>
    <string name="transmit">转发</string>
    <string name="thumbs_up">点赞</string>
    <string name="load_more">上拉加载更多~</string>
    <string name="no_more">没有更多了哦~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
