<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:elevation="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_margin="8dp"
                    android:id="@+id/blog_author_avatar"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

            <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:textSize="18sp"
                        tools:text="@string/app_name"
                        android:id="@+id/blog_author_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            tools:text="2019-07-14"
                            android:id="@+id/blog_create_time"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                    <TextView
                            tools:text="来自 小米9"
                            android:id="@+id/blog_create_phone"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/blog_content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_margin="8dp"
                    tools:text="123454444444444444444444444444"
                    android:id="@+id/blog_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <View android:background="#000000" android:layout_width="match_parent" android:layout_height="1px"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_transmit"
                            android:id="@+id/blog_transmit_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:textSize="18sp"
                            android:text="@string/transmit"
                            android:id="@+id/blog_transmit_button"
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_comment"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/blog_comment_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:textSize="18sp"
                            android:text="@string/comment"
                            android:id="@+id/blog_comment_counts"
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_thumbs_up"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/blog_thumbs_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_gravity="center_vertical"
                            android:textSize="18sp"
                            android:text="@string/thumbs_up"
                            android:id="@+id/blog_thumbs_counts"
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>